[package]
name = "cli-dev-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
clap-stdin = "0.2.1"
edit = "0.1.4"
exitcode = "1.1.2"
md5 = "0.7.0"
sha2 = "0.10.7"
strum = "0.25.0"
strum_macros = "0.25.2"
urlencoding = "2.1.3"
