[package]
name = "cli-dev-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.3"
clap = { version = "4.3.23", features = ["derive"] }
clap-stdin = "0.2.1"
csv = "1.2.2"
edit = "0.1.4"
exitcode = "1.1.2"
flatten-json-object = "0.6.1"
json-objects-to-csv = "0.1.3"
md5 = "0.7.0"
serde_json = "1.0.105"
serde_yaml = "0.9.25"
sha2 = "0.10.7"
strum = "0.25.0"
strum_macros = "0.25.2"
urlencoding = "2.1.3"
